--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,500;0,600;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>E-Commerce Site</title>
   </head>
   <body>
     <div id="root">
